; ModuleID = '/home/carl/AnghaBench/linux/drivers/md/extr_dm-cache-target.c_is_congested.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/md/extr_dm-cache-target.c_is_congested.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dm_dev = type { i32 }
%struct.request_queue = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dm_dev*, i32)* @is_congested to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @is_congested(%struct.dm_dev* %0, i32 %1) #0 {
  %3 = alloca %struct.dm_dev*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.request_queue*, align 8
  store %struct.dm_dev* %0, %struct.dm_dev** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.dm_dev*, %struct.dm_dev** %3, align 8
  %7 = getelementptr inbounds %struct.dm_dev, %struct.dm_dev* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call %struct.request_queue* @bdev_get_queue(i32 %8)
  store %struct.request_queue* %9, %struct.request_queue** %5, align 8
  %10 = load %struct.request_queue*, %struct.request_queue** %5, align 8
  %11 = getelementptr inbounds %struct.request_queue, %struct.request_queue* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load i32, i32* %4, align 4
  %14 = call i32 @bdi_congested(i32 %12, i32 %13)
  ret i32 %14
}

declare dso_local %struct.request_queue* @bdev_get_queue(i32) #1

declare dso_local i32 @bdi_congested(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
